--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,11 @@
       <scope>compile</scope>
     </dependency>
     -->
-
+      <dependency>
+          <groupId>com.google.inject</groupId>
+          <artifactId>guice</artifactId>
+          <version>4.0-beta4</version>
+      </dependency>
   </dependencies>
 
   <build>
