--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
           <artifactId>guice</artifactId>
           <version>4.0-beta4</version>
       </dependency>
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>18.0</version>
+      </dependency>
   </dependencies>
 
   <build>
