--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
     </dependency>
     -->
       <dependency>
+          <groupId>org.javassist</groupId>
+          <artifactId>javassist</artifactId>
+          <version>3.18.2-GA</version>
+      </dependency>
+      <dependency>
           <groupId>com.google.inject</groupId>
           <artifactId>guice</artifactId>
           <version>4.0-beta4</version>
